# dexsim

./: .gitignore  CLAUDE.md  LICENSE  README.md  env.sh  index.html  nettspend - we not like you.mid
docs/: DATASETS.md  PIANO.md  RESEARCH_LOOP.md  RP1M_WARMSTART.md  SETUP.md  STATUS.md  research_journal.md
research/: PLAN.md  STATE.md  SWARM.md
results/: README.md  easy_song_played.mid  easy_song_target.mid  eval_smoke.json  eval_smoke2.json
scripts/: arm_stability.py  bc_pretrain.py  build_combined_left.py  build_corpus.py  build_left_arm.py  build_left_hand.py  build_left_hand_mjcf.py  build_piano_usd.py  build_reference.py  build_rp1m_ik_reference.py  build_rp1m_reference.py  clean_wandb.py  diag_mount.py  diag_reach.py  diag_tip_err.py  diag_wrist_ik.py  distill_generalist.py  dump_joint_names.py  eval_reference.py  find_left_hand.py  finger_key_map.py  fit_keyboard.py  fix_left_hand.py  (+22 more)
source/: pyproject.toml
source/dexsim/: __init__.py
source/dexsim/assets/: __init__.py  piano.py  ur10e_shadow.py
source/dexsim/piano/: __init__.py  corpus.py  fingering.py  generalist.py  geometry.py  goal_encoding.py  ik.py  midi.py  reward.py
source/dexsim/piano/rp1m/: __init__.py  decode.py  retarget.py
source/dexsim/render/: __init__.py  studio.py
source/dexsim/tasks/: __init__.py
source/dexsim/tasks/grasp/: __init__.py  bodex_loader.py  grasp_scene_cfg.py
source/dexsim/tasks/piano/: __init__.py  piano_env.py  piano_env_cfg.py
source/dexsim/tasks/piano/agents/: rsl_rl_ppo_cfg.py
source/dexsim/tasks/reorient/: __init__.py  reorient_env_cfg.py
(+81 files in other folders)
